-feature#3584: Verify passwords against Pwned databases using API
-feature#3585: CLI script to show database permissions that Cacti has
-feature#3568; Allow exclusion of snmp fields / value(s) when adding graphs via CLI
-feature#3677: Relocate the delete button for collectors to the edit page
-feature#3679: Allow searching logs by name, not just id

1.2.23
-security#4920: Add .htaccess file to scripts folder
-issue#4418: When using Single Signon Frameworks like SiteMinder Cacti does not properly detect ticket revocation in callbacks
-issue#4682: New templates are not installed during the update
-issue#4838: CLI Based upgrade generates warnings in PHP 8.1
-issue#4888: Cacti audit_database.php script fails on MySQL 8.0.29 and likely will on newer versions
-issue#4889: Increase host query performance by removing check for NULL after 1.2.22
-issue#4892: Recache Loop after many devices go offline
-issue#4893: in cacti 1.2.22 real time counter gets stuck and does not count down
-issue#4897: Technical support page on remote poller shows max connections of Main poller
-issue#4903: MySQL 8.x regular expressions break Cacti Automation
-issue#4904: The Recommendation for innodb_buffer_pool_instances is incorrect for MySQL 8 and MariaDB < 10.5
-issue#4905: Labels on AREA having a colon breaks the gradient creation with an rrdtool error
-issue#4917: Under certain circumstances Real Time counter gets stuck and does not count down
-issue#4921: Aggregate Graph Permissions not working as expected
-issue#4923: Graph template "duplicate" action does not working - 500 Internal Server Error
-issue#4927: When running audit_database.php script will fail if cacti password had a ')' in it
-issue#4934: Updated phpseclib to version 2.0.38 to support PHP 8.1
-issue#4935: Net-SNMP - Device I/O template Maximum Value is zero
-issue#4940: Error display Data Collectors when sorting by hostname
-issue#4941: Viewing graphs can break when boost is running in some rare cases